# esp32-cellular-lpwa-modem-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partition_table.csv  peru.yaml  sdkconfig  sdkconfig.old
app/: CMakeLists.txt  idf_component.yml
app/src/: main.cpp
app/src/common/: defines.h  error_codes.c  error_codes.h  utils.h
app/src/connectivity/: aws_configuration.h
app/src/connectivity/lpwa_communication_controller/: lpwa_communication_controller.cpp  lpwa_communication_controller.h
app/src/connectivity/simple_mqtt_client_controller/: simple_mqtt_client_controller.cpp  simple_mqtt_client_controller.h
app/src/hardware/: hardware_definitions.h
docs/adr/: ADRs.md
main/: CMakeLists.txt  main.cpp
main/common/: sleep.h
src/: CMakeLists.txt  main.c
src/common/: defines.h  utils.c
test/: CMakeLists.txt  build_tests.sh  main.cpp  test_utils.cpp
test/hardware_mocks/: esp_log.h
